--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,3 @@
-.app-container {
-  text-align: center;
-  margin: 20px;
-}
-
-.tiktok-video-container {
-  margin-top: 20px;
-}
-
-.video-info {
-  margin-top: 20px;
-}
-
-button {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.download-button {
-  background-color: #cc0000;
-}
-
-.download-button:hover {
-  background-color: #990000;
-}
-
-.download-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-@media only screen and (max-width: 430px) {
-  .app-container {
-    margin: 10px;
-  }
-
-  .tiktok-video-container {
-    margin-top: 10px;
-  }
-
-  .video-info {
-    margin-top: 10px;
-  }
-
-  button {
-    margin-top: 5px;
-    padding: 8px 16px;
-    font-size: 14px;
-  }
-
-  .download-buttons {
-    flex-direction: column;
-    gap: 5px;
-    margin-top: 5px;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
